# Computer-Vision

./: .gitignore  README.md
MP1/: bmp.cpp  bmp.hpp  bmp_to_png.py  example.cpp  main.cpp  mp1.cpp  test.py  test_cpp_raw.txt  test_python_raw.txt
MP2/: bmp.hpp  bmp_to_png.py  citations.txt  main.cpp
MP3/: bmp.hpp  citations.txt  main.cpp  moon_cumulative_histogram.csv  moon_histogram.csv  plots.py
MP4/: CMakeLists.txt  MP4_grading criteria.txt  bmp.hpp  citations.txt  combined_BGR_histogram.csv  combined_HSI_histogram.csv  gun1_BGR_histogram.csv  gun1_HSI_histogram.csv  gun1_skin_pixels.txt  joy1_BGR_histogram.csv  joy1_HSI_histogram.csv  joy1_skin_pixels.txt  main.cpp  plots.py  pointer1_BGR_histogram.csv  pointer1_HSI_histogram.csv  pointer1_skin_pixels.txt
MP5/: CMakeLists.txt  bmp.hpp  main.cpp  pixel.hpp  plots.py
MP6/: CMakeLists.txt  bmp.hpp  citations.txt  main.cpp
MP7/: CMakeLists.txt  bmp.hpp  main.cpp
Notes/: boundaries.md  edge_detection.md  motion_estimation.md
